--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class=" col-md-8">
     <h1 class="head-title"><%= @user.first_name %> <%=@user.last_name %></h1>
     <% if current_user?(@user) || current_user.admin? %>
-      <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default btn-xs" %>
+      <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default btn-xs new_task" %>
     <% end %>
   </div>
 </div>
