--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -42,10 +42,10 @@
         <div class="row">
           <div class="col-md-4 separator">
             <% if current_user.admin? %>
-              <%= link_to "Delete", request, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+              <%= link_to "Delete", request, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-xs" %>
             <% end %>
             <% if current_user == request.user %>
-              <%= link_to "Edit", edit_request_path(request), class: "btn btn-default btn-xs" %>
+              <%= link_to "Edit", edit_request_path(request), class: "btn btn-primary btn-xs" %>
             <% end %>
           </div>
         </div><br>
@@ -56,9 +56,9 @@
               <div class="each_response">
                 <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
                 <% if request.assignees.include?(response.user) %>
-                  <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-default btn-xs", :method => :delete %>
+                  <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-danger btn-xs", :method => :delete %>
                 <% else %>
-                  <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-default btn-xs", :method => :post %>
+                  <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-primary btn-xs", :method => :post %>
                 <% end %>
               </div>
             <% end %>
@@ -75,14 +75,14 @@
               <strong>My Response:</strong> <%= current_response(request, current_user).comment %>
               <div class="row">
                 <div class="col-md-6 separator">
-                  <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-default btn-xs" %>
-                  <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
+                  <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-primary btn-xs" %>
+                  <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
                 </div>
               </div>
             </div>
           </div>
         <% else %>
-          <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-default btn-xs" %></td>
+          <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-primary btn-xs" %></td>
         <% end %>
       </div><br><br>
     <% end %>
