--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,6 +75,7 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  margin-bottom: 15px;
 }
 
 #logo:hover {
@@ -249,7 +250,7 @@ input[type=checkbox]{
 }
 .head-title
 {
-  text-decoration:underline;
+  font-weight: bold;
 }
 .logo
 {
@@ -269,5 +270,9 @@ input[type=checkbox]{
 .new_task
 {
   display: inline;
-  margin-left:20px;
+  margin-left: 20px;
+}
+nav
+{
+  margin-bottom: 15px;
 }
