--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -94,12 +94,12 @@
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <%= f.submit 'Add Skill', :name => "add_skill", class: "btn btn-default btn-xs" %>
+      <%= f.submit 'Add Skill', :name => "add_skill", class: "btn btn-primary btn-xs" %>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-2">
-      <%= f.submit class: "btn btn-default btn-sm" %>
+      <%= f.submit class: "btn btn-success btn-sm" %>
     </div>
   </div>
   <% end %>
