--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="head-title">Listing Departments</h1>
-<%= link_to 'New Department', new_department_path, class: "btn btn-default btn-xs" %><br><br>
+<h1 class="head-title">All Departments</h1>
+<%= link_to 'New Department', new_department_path, class: "btn btn-primary btn-xs new_task" %><br><br>
     <% @departments.each do |department| %>
       <div class="row">
         <div class="col-md-6">
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Edit', edit_department_path(department), class: "btn btn-default btn-xs" %>
-            <%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
+            <%= link_to 'Edit', edit_department_path(department), class: "btn btn-primary btn-xs" %>
+            <%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
           <% end %>
         </div>
       </div></br>
