--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8">
     <h1 class="head-title">All Groups</h1>
-    <%= link_to 'New Group', new_group_path, class: "btn btn-default btn-xs" %><br><br>
+    <%= link_to 'New Group', new_group_path, class: "btn btn-primary btn-xs new_task" %><br><br>
         <% @groups.each do |group| %>
           <div class="row">
             <div class="col-md-6">
@@ -11,8 +11,8 @@
           <div class="row">
             <div class="col-md-6">
               <% if current_user.admin? %>
-                <%= link_to 'Edit', edit_group_path(group), class: "btn btn-default btn-xs" %>
-                <%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
+                <%= link_to 'Edit', edit_group_path(group), class: "btn btn-primary btn-xs" %>
+                <%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
               <% end %>
             </div>
           </div></br>
