--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,13 +9,13 @@
           <%= link_to "Log In", login_path %>
         </li>
       <% elsif logged_in? %>
-        <li role="presentation" class=<%= 'active' if params.include?(:active) %>>
+        <li role="presentation" class=<%= 'active' if open_requests_view == true %>>
           <%= link_to "Open Requests",  requests_path(:active => true) %>
         </li>
         <li role="presentation" class=<%= 'active' if params.include?(:applied) %>>
           <%= link_to "Applications", requests_path(:applied => true) %>
         </li>
-        <li role="presentation" class=<%= 'active' if params.include?(:user) && params[:controller] == 'requests' %>>
+        <li role="presentation" class=<%= 'active' if my_request_view == true %>>
           <%= link_to "My Requests",    requests_path(:user => current_user) %>
         </li>
         <li role="presentation" class=<%= 'active' if current_page?(current_user) %>>
