--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
+      <%= session[:return_to] if Rails.env.development? %>
     </div>
   </body>
 </html>
