--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class="head-title">All Positions</h1>
-<%= link_to 'New Position', new_position_path, class: "btn btn-default btn-xs" %><br><br>
+<%= link_to 'New Position', new_position_path, class: "btn btn-primary btn-xs new_task" %><br><br>
     <% @positions.each do |position| %>
       <div class="row">
         <div class="col-md-6">
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col-md-6">
           <% if current_user.admin? %>
-            <%= link_to 'Edit', edit_position_path(position), class: "btn btn-default btn-xs" %>
-            <%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default btn-xs" %>
+            <%= link_to 'Edit', edit_position_path(position), class: "btn btn-primary btn-xs" %>
+            <%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
           <% end %>
         </div>
       </div></br>
