--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 separator">
       <% if params.include?(:user) %>
         <h1 class="head-title">My Requests</h1>
-        <%= link_to 'New Request', new_request_path, class: "btn btn-default btn-xs new_task" %>
+        <%= link_to 'New Request', new_request_path, class: "btn btn-primary btn-xs new_task" %>
       <% elsif params.include?(:active) %>
         <h1 class="head-title">Open Requests</h1>
       <% elsif params.include?(:applied) %>
@@ -13,79 +13,11 @@
   </div>
 </div>
 <div class="container">
-  <div id="request_container">
-    <%= will_paginate %>
-    <% @requests.each do |request| %>
-      <div class="each_request">
-        <div class="row">
-          <h4><%= request.name %>:</h4> <%= request.start_date.to_s(:long) %> - <%= request.end_date.to_s(:long) %>
-          <% if request.start_date <= Date.today && Date.today <= request.end_date %>
-            (In Progress)
-          <% elsif request.start_date > Date.today %>
-            (Not Yet Begun)
-          <% else %>
-            (Request Ended)
-          <% end %>
-        </div>
-        <div class="row">
-          Posted by <%= request.user.full_name %> in <%= request.location.name %> Office (Group: <%= request.group.name %>)
-        </div>
-        <div class="row">
-          Description: <%= request.description %><br>
-        </div>
-        <div class="row horizontal-list">
-          Required Skills: 
-          <% request.skills.each do |skill| %>
-            <li><%= skill.name %></li>
-          <% end %>
-        </div>
-        <div class="row">
-          <div class="col-md-4 separator">
-            <% if current_user.admin? %>
-              <%= link_to "Delete", request, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-xs" %>
-            <% end %>
-            <% if current_user == request.user %>
-              <%= link_to "Edit", edit_request_path(request), class: "btn btn-primary btn-xs" %>
-            <% end %>
-          </div>
-        </div><br>
-        <% if owner_of?(request) %>
-          <% if request.responses.any? %>
-            Responses:
-            <% request.responses.each do |response| %>
-              <div class="each_response">
-                <%= link_to response.user.full_name, user_path(response.user) %>  Comment: <%= response.comment %>
-                <% if request.assignees.include?(response.user) %>
-                  <%= link_to 'Unassign', destroy_assignment_path(current_assignment(request, response.user)), class: "btn btn-danger btn-xs", :method => :delete %>
-                <% else %>
-                  <%= link_to 'Assign', create_assignment_path(request_id: request, user_id: response.user), class: "btn btn-primary btn-xs", :method => :post %>
-                <% end %>
-              </div>
-            <% end %>
-          <% else %>
-            No Responses
-          <% end %>
-        <% elsif request.assignees.include?(current_user) %>
-          You've been assigned to this request!
-        <% elsif !request.open? %>
-          No longer accepting responses to this request.
-        <% elsif request.responders.include?(current_user) %>
-          <div class="row">
-            <div class="col-md-6 each_response">
-              <strong>My Response:</strong> <%= current_response(request, current_user).comment %>
-              <div class="row">
-                <div class="col-md-6 separator">
-                  <%= link_to 'Modify  Response', edit_request_response_path(request, current_response(request,current_user)), class: "btn btn-primary btn-xs" %>
-                  <%= link_to 'Revoke Reponse', request_response_path(request, current_response(request,current_user)), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% else %>
-          <%= link_to 'Respond to Request.', new_request_response_path(request), class: "btn btn-primary btn-xs" %></td>
-        <% end %>
-      </div><br><br>
-    <% end %>
-    <% will_paginate %>
-  </div>
+  <% if params.include?(:active) %>
+    <%= render 'layouts/defaultrequest' %>
+  <% elsif params.include?(:applied) %>
+    <%= render 'layouts/applicationrequest' %>
+  <% elsif params.include?(:user) %>
+    <%= render 'layouts/myrequest' %>
+  <% end %>
 </div>
