--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,12 +23,12 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <%= link_to "Full Profile", user, class: "btn btn-default btn-xs" %>
+      <%= link_to "Full Profile", user, class: "btn btn-primary btn-xs" %>
       <% if current_user.admin? || current_user == user %>
-        <%= link_to "Edit", edit_user_path(user), class: "btn btn-default btn-xs" %>
+        <%= link_to "Edit", edit_user_path(user), class: "btn btn-primary btn-xs" %>
       <% end %>
       <% if current_user.admin? %>
-        <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs" %>
+        <%= link_to "Delete", user, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-xs" %>
       <% end %>
     </div>
   </div><br>
