modified header active tab rules and what actions were accessible from each tab. tabs should now be active if an action was taken from them

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
         <li role="presentation" class=<%= 'active' if open_requests_view == true %>>
           <%= link_to "Open Requests",  requests_path(:active => true) %>
         </li>
-        <li role="presentation" class=<%= 'active' if params.include?(:applied) %>>
+        <li role="presentation" class=<%= 'active' if applied_view == true %>>
           <%= link_to "Applications", requests_path(:applied => true) %>
         </li>
         <li role="presentation" class=<%= 'active' if my_request_view == true %>>
