SHOULD BE TASK 8, Accidentally did not checkout 8 and these are added to 7. Created proficiency model to store various defined values for skill level. Added proficieny to needed_skills, display proficiency on a couple of views. Can now add proficiency to each needed skill

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
               <li><%= link_to "Locations", locations_path %></li>
               <li><%= link_to "Positions", positions_path %></li>
               <li><%= link_to "Skills", skills_path %></li>
+              <li><%= link_to "Proficiencies", proficiencies_path %></li>
             </ul>
           </li>
         <% end %>
