--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="head-title">Listing Projects</h1> 
-<%= link_to 'New Project', new_project_path, class: " btn btn-primary btn-xs new_task" %>
+<h1 class="head-title">Listing Projects</h1>
+<%= link_to 'New Project', new_project_path, class: " btn btn-primary btn-xs new_task" %><br><br>
 <div id="project_container">
   <% @projects.each do |project| %>
   <div class="each_request">
