--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -9,7 +9,7 @@
         <h1 class="head-title">Applications</h1>
       <% else %>
         <h1 class="head-title">All Requests</h1>
-      <% end %>
+      <% end %><br><br>
   </div>
 </div>
 <div class="container">
