--- a/app/views/layouts/_defaultrequest.html.erb
+++ b/app/views/layouts/_defaultrequest.html.erb
@@ -20,8 +20,13 @@
     </div>
     <div class="row horizontal-list">
       Required Skills: 
-      <% request.skills.each do |skill| %>
-        <li><%= skill.name %></li>
+      <% request.needed_skills.each do |skill| %>
+        <li><%= skill.skill.name %>: 
+        <% if skill.proficiency.nil? %>
+        No Level
+        <% else %>
+          <%= skill.proficiency.name %>
+        <% end %></li>
       <% end %>
     </div>
     <div class="row">
