--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
-      <%= session[:return_to] if Rails.env.development? %>
+      <div class="return">
+        <%= session[:return_to] if Rails.env.development? %>
+      </div>
     </div>
   </body>
 </html>
