--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -84,6 +84,10 @@
             <%= builder.label :skill_id, "Name" %>
             <%= builder.collection_select :skill_id, @skills, :id, :name, {include_blank: ''}, {class: 'form-control'} %>
           </div>
+          <div class="col-md-4">
+            <%= builder.label :skill_level, "Level" %>
+            <%= builder.collection_select :proficiency_id, @proficiencies, :id, :name, {include_blank: ''}, {class: 'form-control'} %>
+          </div>
           <div class="col-md-1">
             <%= builder.label :_destroy, 'Delete' %>
             <%= builder.check_box :_destroy %>
