--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="head-title">All Users</h1>
+<h1 class="head-title">All Users</h1><br><br>
 <% @users.each do |user| %>
   <div class="row">
     <div class="col-md-6">
