modifed some redirects, for some reason the return_to session variable is not being set for the request controller

--- a/app/views/layouts/_defaultrequest.html.erb
+++ b/app/views/layouts/_defaultrequest.html.erb
@@ -34,7 +34,7 @@
       <% end %>
       </div>
       </ul>
-    </div>
+    </div><br>
     <div class="row">
       <div class="col-md-4 separator">
         <% if current_user.admin? %>
