--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -49,7 +49,7 @@
   </div>
   <div class="row">
     <div class="col-md-2">
-      <%= f.submit class: "btn btn-default btn-sm" %>
+      <%= f.submit class: "btn btn-primary btn-sm" %>
     </div>
   </div>
 <% end %>
