--- a/app/views/proficiencies/_form.html.erb
+++ b/app/views/proficiencies/_form.html.erb
@@ -16,6 +16,10 @@
       <%= f.label :name %><br>
       <%= f.text_field :name, class: "form-control" %>
     </div>
+    <div class="col-md-1">
+      <%= f.label :level %>
+      <%= f.number_field :level, class: "form-control" %>
+    </div>
   </div>
   <div class="row">
     <div class="col-md-4">
