Apparently had file that was uncommited, fixed error with user show screen

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -134,6 +134,8 @@
                       <%= assignment.request.project.description %>
                     </div>
                   </div>
+              <% end %>
+            <% end %>
           </div>
         </div>
       </div>
